<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="15dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        android:background="@color/light_blue"
        android:text="@string/cacl_text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnSeven"
            android:textSize="@dimen/sp_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_7"
            />
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_24"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_8"
            />
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_24"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_9"
            />
        <Button
            android:onClick="operatorEvent"
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_24"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_Divide"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnFour"
            android:textSize="@dimen/sp_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_4"
            />

        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_24"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_2"
            android:layout_weight="1"
            android:text="@string/txt_5" />

        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnSix"
            android:textSize="@dimen/sp_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_6"
            />
        <Button
            android:onClick="operatorEvent"
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:textSize="@dimen/sp_24"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_Multiply"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnOne"
            android:textSize="@dimen/sp_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_1"
            />
        <Button
            android:onClick="numberEvent"
            android:id="@+id/btnTwo"
            android:textSize="@dimen/sp_24"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_2"
            />
        <Button
            android:onClick="numberEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_3"
            />
        <Button
            android:onClick="operatorEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_Subtract"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="numberEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_0"
            />
        <Button
            android:onClick="clearnEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_clr"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:onClick="operatorEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_Plus"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:onClick="numberEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/txt_."
            />
        <Button
            android:onClick="resultEvent"
            android:textSize="@dimen/sp_24"
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_margin="@dimen/dp_2"
            android:text="@string/btn_Result"
            />
    </LinearLayout>
</LinearLayout>